# igz_parser

./: .gitignore  README.md  decomposer.py  igz_file_spec.odt  pyproject.toml  sample.json
lib/: chunks.py  fixup.py  header.py  igz.py  utils.py
lib/fixups/: base.py  exid.py  exnm.py  mtsz.py  onam.py  rhnd.py  rnex.py  rofs.py  root.py  rpid.py  rstt.py  rvtb.py  tdep.py  tmet.py  tstr.py
lib/objects/: objectHeader.py  objectNode.py  objectParser.py  offsetParser.py
lib/objects/classes/: CEntity.py  RangedFloat.py  Vector3.py
